# hw3-aarush0321

./: Makefile  README.md  ai_documentation.txt  myst.yml
ligotools/: pyproject.toml  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
