[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
authors = [
  { name="Ligo Scientific Collaboration (LSC)"},
  { name="Aarush Maddela"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy==2.0",
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "scipy==1.13",
    "ipykernel==6.29",
]